# coeff-flow

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  README.md
Docker/: Dockerfile
graph-test/: Makefile  graphtest.cpp
img-test/: Makefile  test0.cpp
lib/: BoundingChain.cpp  BoundingChain.hpp  meshreader.hpp
lib/scomplex/: Simplicial_Complex.h  Simplicial_Map.h  base_utils.hpp  chain-calc.hpp  chain_calc.hpp  chains.hpp  clusterer.cpp  clusterer.hpp  coeff_flow.cpp  coeff_flow.hpp  coeff_flow_dist.hpp  drawing_utils.hpp  exterior_prod.hpp  graph_utils.hpp  hom_path_clusterer.hpp  nn_utils.hpp  path-snapping.hpp  path_snapper.cpp  path_snapper.hpp  plywriter.hpp  qhull_parsing.hpp  quotient.cpp  quotient.hpp  simplicial_complex.cpp  simplicial_complex.hpp  simplicial_map.cpp  simplicial_map.hpp  trace.h  types.hpp  utils.h  utils.hpp
lib/scomplex_ho/: chain_calc.hpp  chains.hpp  coeff_flow.hpp  exterior_prod.hpp  graph_utils.hpp  hom_path_clusterer.hpp  nn_utils.hpp  path_snapper.hpp  plywriter.hpp  quotient.hpp  simplicial_complex.hpp  types.hpp
python/: bindings.cpp
src/: chaintest.cpp  exttest.cpp  graphtest.cpp  hasse_test.cpp  impl_test.cpp  libtest.cpp  main.cpp  make_mesh.cpp  nn_test.cpp  quotient.cpp  test0.cpp  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test7.cpp  testing_facility.cpp  utils.hpp
test/: bigfly2.yaml  bunny2.yaml  dumbexample.yaml  run_dumb_tests.sh  smallfly2.yaml
